--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -57,6 +57,10 @@
 	[toolbarAutoFullScreen]="isAutoFullScreen"
 	[toolbarSupervisorButton]="true"
 	[toolbarQuestionPanelButton]="isquestionpanel"
+	[usertype]="type"
+	[displayicdc]="isdisplayicdc"
+	[editicdc]="isediticdc"
+	[titleicdc]="istitleicdc"
 >
 </ov-videoconference>
 
