--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.css
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.css
@@ -1,63 +1,36 @@
-
-.text-container {
-	/* padding: 5px; */
-	background-color: var(--ov-light-color);
-	color: var(--ov-panel-text-color);
-	text-align: center;
-	/* margin: 5px 5px; */
-	font-size: 12px;
+.panel-container{
+	border-radius: 10px;
+	padding: 10px;
 }
 
-.text-info {
-	margin: 3px;
+.panel-header-container{
+	padding: 10px;
+	display: flex;
+  	align-items: center;
 }
+
+.panel-title{
+	font-size: 30px;
+	padding: 5px;
+	
+  }
 
 .question-container {
 	display: block !important;
 	overflow-y: auto;
 	overflow-x: hidden;
-	padding: 10px;
+	padding-top: 20px;
 }
 
 
-
-.message {
-	position: relative;
-	padding: 3px 0;
-}
-
-.msg-detail {
+.question-detail {
 	width: 95%;
 	display: inline-block;
 }
 
-.msg-detail p {
-	margin: 0;
-	font-size: 14px;
-}
-
-
-.msg-content {
-	position: relative;
-	border-radius: var(--ov-panel-radius);
-	padding: 8px;
-	color: #000000;
-	width: auto;
-	max-width: 95%;
-	font-size: 13px;
-	word-break: break-all;
-}
-
-
-
-.message.left .msg-detail .msg-content {
-	float: left;
-}
-
-/* End message from other user */
-
-.message.right .msg-detail .msg-content {
-	float: right;
+.question-block{
+	width: 300px;
+	padding-left: 10px;
 }
 
 ::ng-deep a:-webkit-any-link {
@@ -123,10 +96,6 @@ form {
 	margin-bottom: 10px;
   }
 
-  .panel-title{
-	font-size: 30px;
-	padding-bottom: 15px;
-  }
 
   label.question{
 	font-size: medium;
