fixed icdc parameters

--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.html
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.html
@@ -31,6 +31,7 @@
 						<div>
 						  <ng-container *ngFor="let option of question.meta">
 							<mat-checkbox
+							  [disabled]="!editicdc"
 							  [value]="option"
 							  [checked]="isOptionSelected(question.q_id, option)"
 							  (change)="updateSelectedAnswers(question.q_id , option, $event.checked)"
