fixed call component html file

--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -59,6 +59,11 @@
 	[toolbarScreenShareWithAudio]="isScreenShareWithAudio"
 	[toolbarAutoFullScreen]="isAutoFullScreen"
 	[toolbarSupervisorButton]="true"
+	[toolbarQuestionPanelButton]="isquestionpanel"
+	[usertype]="type"
+	[displayicdc]="isdisplayicdc"
+	[editicdc]="isediticdc"
+	[titleicdc]="istitleicdc"
 >
 </ov-videoconference>
 
