added ids in sidenav

--- a/mcarbonPortal/src/app/components/sidebar/sidebar.component.html
+++ b/mcarbonPortal/src/app/components/sidebar/sidebar.component.html
@@ -67,6 +67,7 @@
       routerLinkActive="active"
       *ngIf="menuItem.show"
       class="{{ menuItem.class }} nav-item"
+      id="{{ menuItem.class }}"
     >
       <a class="nav-link" [routerLink]="[menuItem.path]">
         <i>
