--- a/mcarbonPortal/src/app/session-management/session-management.component.html
+++ b/mcarbonPortal/src/app/session-management/session-management.component.html
@@ -168,6 +168,7 @@
                     <mat-menu #menu="matMenu" xPosition="before">
                       <button
                         class="btn-action"
+                        id="view"
                         mat-menu-item
                         (click)="viewUserDialog(user)"
                       >
@@ -178,6 +179,7 @@
                       </button>
                       <button
                         class="btn-action"
+                        id="edit"
                         mat-menu-item
                         (click)="updateUserDialog(user)"
                         *ngIf="showEdit"
@@ -187,6 +189,7 @@
                       </button>
                       <button
                         class="btn-action"
+                        id="delete"
                         mat-menu-item
                         (click)="deleteUser(user.userId)"
                         *ngIf="showDelete"
@@ -198,6 +201,7 @@
                       </button>
                       <button
                         class="btn-action"
+                        id="expire"
                         mat-menu-item
                         (click)="expireData()"
                       >
