--- a/mcarbonPortal/src/app/user-management/user-management.component.html
+++ b/mcarbonPortal/src/app/user-management/user-management.component.html
@@ -163,6 +163,7 @@
                     <mat-menu #menu="matMenu" xPosition="before">
                       <button
                         class="btn-action"
+                        id="view"
                         mat-menu-item
                         (click)="viewUserDialog(user)"
                       >
@@ -173,6 +174,7 @@
                       </button>
                       <button
                         class="btn-action"
+                        id="edit"
                         mat-menu-item
                         (click)="updateUserDialog(user)"
                         *ngIf="showEdit"
@@ -182,6 +184,7 @@
                       </button>
                       <button
                         class="btn-action"
+                        id="delete"
                         mat-menu-item
                         (click)="deleteUser(user.userId)"
                         *ngIf="showDelete"
@@ -193,6 +196,7 @@
                       </button>
                       <button
                         class="btn-action"
+                        id="expire"
                         mat-menu-item
                         (click)="expireData()"
                       >
