--- a/mcarbonPortal/src/app/feedback-form/feedback-form.component.html
+++ b/mcarbonPortal/src/app/feedback-form/feedback-form.component.html
@@ -1,34 +1,34 @@
-<div class="main-content">
+<div class="main-content form-content">
   <div class="container-fluid">
     <div class="row section-1">
       <div class="col-md-12">
         <div class="row card card-body card-body-1">
-          <div class="col-md-4">
+          <div class="col-md-6">
             <mat-form-field>
               <input
                 matInput
                 type="text"
                 value="Untitled Form"
-                plaveholder="Form Name"
+                placeholder="Form Name"
               />
             </mat-form-field>
           </div>
           <div
-            class="col-md-4"
+            class="col-md-2 offset-md-1"
             cdkDropList
             (cdkDropListDropped)="onQuestionDrop($event)"
           >
             <div
               class="question-box"
               [cdkDragDisabled]="questionDisable"
-              cdkDragBoundary=".question-body"
+              cdkDragBoundary="#question-div"
               cdkDrag
             >
               Question
             </div>
           </div>
           <div
-            class="col-md-4"
+            class="col-md-2 offset-md-1"
             cdkDropList
             (cdkDropListDropped)="onAnswerDrop($event)"
           >
@@ -36,17 +36,17 @@
               class="answer-box"
               [cdkDragDisabled]="answerDisable"
               cdkDrag
-              cdkDragBoundary=".answer-body"
+              cdkDragBoundary="#answer-div"
             >
               Answer
             </div>
           </div>
         </div>
-        <div class="row card card-body">
-          <div class="question-body" id="question-div" cdkDropList></div>
+        <div class="row card card-body question-body">
+          <div class="" id="question-div" cdkDropList></div>
         </div>
-        <div class="row card card-body" *ngIf="questionDisable">
-          <div class="answer-body" id="answer-div" cdkDropList></div>
+        <div class="row card card-body answer-body" *ngIf="questionDisable">
+          <div class="" id="answer-div" cdkDropList></div>
         </div>
       </div>
     </div>
@@ -58,6 +58,6 @@
   </div>
   <div class="footer">
     <button class="btn btn-danger">Cancel</button>
-    <button class="btn btn-success">Save</button>
+    <button class="btn btn-success" (click)="saveQuestion()">Save</button>
   </div>
 </div>
