--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/video/video.component.css
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/video/video.component.css
@@ -10,4 +10,15 @@ video {
 	font-size: 100%;
 	border-radius: var(--ov-video-radius);
 	background-color: #000000;
+    pointer-events: none;
+}
+
+/* to hide video element controls in chrome */
+video::-webkit-media-controls {
+	display: none !important;
+}
+
+/* to hide video element controls in Firefox */
+video ::-moz-range-track {
+	display: none !important;
 }
