--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -58,7 +58,7 @@
 	[floatingLayoutType]="layoutNumber"
 	[toolbarScreenShareWithAudio]="isScreenShareWithAudio"
 	[toolbarAutoFullScreen]="isAutoFullScreen"
-	[toolbarSupervisorButton]="true"
+	[toolbarSupervisorButton]="addSupervisor"
 	[toolbarQuestionPanelButton]="isquestionpanel"
 	[usertype]="type"
 	[displayicdc]="isdisplayicdc"
