--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/stream/stream.component.html
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/stream/stream.component.html
@@ -78,7 +78,7 @@
 				<mat-icon>picture_in_picture</mat-icon>
 				<span>{{ 'STREAM.REPLACE_SCREEN' | translate }}</span>
 			</button>
-			<button mat-menu-item id="holdButton" *ngIf="!this._stream.participant.local" (click)="toggleHold()">
+			<button mat-menu-item id="holdButton" *ngIf="!this._stream.participant.local && this._stream.participant.nickname=='Customer'" (click)="toggleHold()">
 				<mat-icon *ngIf="!this.isOnHold">pause</mat-icon>
 				<span *ngIf="!this.isOnHold">{{ 'STREAM.HOLD' | translate }}</span>
 
